--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+*node_modules*
 /.pnp
 .pnp.js
-*.env*
+
 
 # testing
 /coverage
@@ -12,9 +12,12 @@
 # production
 /build
 
+
+
 # misc
 .DS_Store
 .env.local
+*.env*
 .env.development.local
 .env.test.local
 .env.production.local
