navlink works now for some reason 🤷

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "files.exclude": {
-        // ".gitignore": true,
+        ".gitignore": true,
         ".md": true,
         "*lock*": true,
         "node_modules": true,
