--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm-run-all": "^4.1.5"
   },
   "scripts": {
-    "client": "cd client & start npm start",
+    "client": "cd client & npm start",
     "server": "start nodemon server/index.js",
     "dev": "run-p server client"
   }
