--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aws-sdk": "^2.611.0",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "npm-run-all": "^4.1.5"
   },
   "scripts": {
     "client": "cd client & npm start",
-    "server": "start nodemon server/index.js",
+    "server": "nodemon server/index.js",
     "dev": "run-p server client"
   }
 }
