--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "dependencies": {
     "aws-sdk": "^2.611.0",
     "body-parser": "^1.19.0",
+    "chalk": "^3.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "npm-run-all": "^4.1.5"
+    "express-winston": "^4.0.2",
+    "npm-run-all": "^4.1.5",
+    "winston": "^3.2.1"
   },
   "scripts": {
     "client": "cd client & npm start",
