--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-winston": "^4.0.2",
+    "mongodb": "^3.5.2",
+    "mongoose": "^5.8.11",
     "npm-run-all": "^4.1.5",
     "winston": "^3.2.1"
   },
