--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.11",
     "npm-run-all": "^4.1.5",
+    "validator": "^12.2.0",
     "winston": "^3.2.1"
   },
   "scripts": {
