--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "express-winston": "^4.0.2",
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.11",
+    "mongoose-beautiful-unique-validation": "^7.1.1",
     "npm-run-all": "^4.1.5",
     "validator": "^12.2.0",
     "winston": "^3.2.1"
