--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,8 @@
     ]
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.18.3",
     "npm-run-all": "^4.1.5"
   }
 }
