--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "client": "cd client & npm start",
     "server": "nodemon server/index.js",
     "dev": "run-p server client"
+  },
+  "devDependencies": {
+    "eslint": "^6.8.0"
   }
 }
