--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "winston": "^3.2.1"
   },
   "scripts": {
+    "start": "server/index.js",
+    "build": "cd client & npm build",
     "client": "cd client & npm start",
     "server": "nodemon server/index.js",
     "dev": "run-p server client"
