--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 # testing
 /coverage
 
+
 # production
 */build/
 
@@ -21,6 +22,7 @@
 .env.test.local
 .env.production.local
 *.vscode*
+*gotchas.txt*
 
 npm-debug.log*
 yarn-debug.log*
