--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,10 @@
     "path-to-regexp": "^1.7.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-hook-form": "^4.10.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "react-select": "^3.0.8",
-    "react-spinners": "^0.8.0",
-    "redux": "^4.0.5"
+    "react-spinners": "^0.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
