--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,9 @@
     "react-hook-form": "^4.10.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "react-spinners": "^0.8.0"
+    "react-spinners": "^0.8.0",
+    "react-toastify": "^5.5.0",
+    "use-deep-compare-effect": "^1.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
