--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "classnames": "^2.2.6",
+    "cogo-toast": "^4.2.3",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
@@ -18,7 +19,6 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-spinners": "^0.8.0",
-    "react-toastify": "^5.5.0",
     "use-deep-compare-effect": "^1.3.0"
   },
   "scripts": {
