--- a/client/package.json
+++ b/client/package.json
@@ -19,7 +19,8 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-spinners": "^0.8.0",
-    "use-deep-compare-effect": "^1.3.0"
+    "use-deep-compare-effect": "^1.3.0",
+    "validator": "^12.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
