--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,11 @@
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
     "path-to-regexp": "^1.7.0",
+    "preact": "^10.3.3",
+    "preact-compat": "^3.19.0",
+    "purecss-sass": "^1.0.1",
     "react": "^16.12.0",
+    "react-app-rewire-aliases": "^0.2.0",
     "react-dom": "^16.12.0",
     "react-hook-form": "^4.10.1",
     "react-router-dom": "^5.1.2",
@@ -23,6 +27,7 @@
     "validator": "^12.2.0"
   },
   "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -46,6 +51,7 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.18.3",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "react-app-rewired": "^2.1.5"
   }
 }
