--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,6 @@
     "normalize.css": "^8.0.1",
     "path-to-regexp": "^1.7.0",
     "preact": "^10.3.3",
-    "preact-compat": "^3.19.0",
     "purecss-sass": "^1.0.1",
     "react": "^16.12.0",
     "react-app-rewire-aliases": "^0.2.0",
@@ -28,9 +27,9 @@
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
