--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,7 @@
     "preact": "^10.3.3",
     "purecss-sass": "^1.0.1",
     "react": "^16.12.0",
-    "react-app-rewire-aliases": "^0.2.0",
+    "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
     "react-hook-form": "^4.10.1",
     "react-router-dom": "^5.1.2",
@@ -50,7 +50,6 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.18.3",
-    "npm-run-all": "^4.1.5",
-    "react-app-rewired": "^2.1.5"
+    "npm-run-all": "^4.1.5"
   }
 }
