--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "classnames": "^2.2.6",
     "cogo-toast": "^4.2.3",
+    "compression-webpack-plugin": "^3.1.0",
     "moment": "^2.24.0",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
