--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "aws-sdk": "^2.611.0",
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
+    "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-winston": "^4.0.2",
