--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
     "classnames": "^2.2.6",
     "cogo-toast": "^4.2.3",
     "compression-webpack-plugin": "^3.1.0",
-    "moment": "^2.24.0",
+    "dayjs": "^1.8.22",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
     "path-to-regexp": "^1.7.0",
