--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "cogo-toast": "^4.2.3",
     "compression-webpack-plugin": "^3.1.0",
     "dayjs": "^1.8.22",
+    "loaders.css": "^0.1.2",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
     "path-to-regexp": "^1.7.0",
@@ -20,15 +21,15 @@
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.13.0",
     "react-hook-form": "^4.10.1",
+    "react-loaders": "^3.0.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
-    "react-spinners": "^0.8.0",
     "use-deep-compare-effect": "^1.3.0",
     "validator": "^12.2.0"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
-    "start": "react-app-rewired start",
+    "start": "react-scripts start",
     "build": "react-app-rewired build",
     "test": "react-app-rewired test --env=jsdom",
     "eject": "react-scripts eject"
