--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-print-routes": "^1.0.0",
     "express-winston": "^4.0.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "mongodb": "^3.5.2",
     "mongoose": "^5.8.11",
     "mongoose-beautiful-unique-validation": "^7.1.1",
