--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "aws-sdk": "^2.611.0",
+    "aws-sdk": "^2.638.0",
     "body-parser": "^1.19.0",
     "chalk": "^3.0.0",
     "compression": "^1.7.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "express-print-routes": "^1.0.0",
-    "express-winston": "^4.0.2",
+    "express-print-routes": "git+https://github.com/netanel-haber/express-print-clean-routes.git",
+    "express-winston": "^4.0.3",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "mongodb": "^3.5.2",
-    "mongoose": "^5.8.11",
+    "mongodb": "^3.5.5",
+    "mongoose": "^5.9.4",
     "mongoose-beautiful-unique-validation": "^7.1.1",
     "npm-run-all": "^4.1.5",
     "validator": "^12.2.0",
@@ -28,6 +28,7 @@
     "dev": "run-p server client"
   },
   "devDependencies": {
-    "eslint": "^6.8.0"
+    "eslint": "^6.8.0",
+    "express-print-clean-routes": "https://github.com/netanel-haber/express-print-clean-routes.git"
   }
 }
