--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "loaders.css": "^0.1.2",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
+    "password-validator": "^5.0.3",
     "path-to-regexp": "^1.7.0",
     "preact": "^10.3.3",
     "purecss-sass": "^1.0.1",
