--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^5.9.4",
     "mongoose-beautiful-unique-validation": "^7.1.1",
     "npm-run-all": "^4.1.5",
+    "password-validator": "^5.0.3",
     "validator": "^12.2.0",
     "winston": "^3.2.1"
   },
