--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose-beautiful-unique-validation": "^7.1.1",
     "npm-run-all": "^4.1.5",
     "password-validator": "^5.0.3",
+    "uuid": "^7.0.2",
     "validator": "^12.2.0",
     "winston": "^3.2.1"
   },
