--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,7 @@
   "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.18.3",
-    "npm-run-all": "^4.1.5"
+    "npm-run-all": "^4.1.5",
+    "react-json-pretty": "^2.2.0"
   }
 }
