--- a/client/package.json
+++ b/client/package.json
@@ -18,16 +18,13 @@
     "path-to-regexp": "^1.7.0",
     "preact": "^10.3.3",
     "purecss-sass": "^1.0.1",
-    "react": "^16.13.0",
     "react-app-rewired": "^2.1.5",
-    "react-dom": "^16.13.0",
+    "react-day-picker": "^7.4.0",
     "react-hook-form": "^4.10.1",
     "react-loaders": "^3.0.1",
-    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-with-breakpoints": "^4.0.4",
     "use-deep-compare-effect": "^1.3.0",
-    "use-force-update": "^1.0.7",
     "validator": "^12.2.0"
   },
   "scripts": {
@@ -56,6 +53,9 @@
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.18.3",
     "npm-run-all": "^4.1.5",
-    "react-json-pretty": "^2.2.0"
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-json-pretty": "^2.2.0",
+    "react-router-dom": "^5.1.2"
   }
 }
