--- a/client/package.json
+++ b/client/package.json
@@ -55,6 +55,7 @@
     "npm-run-all": "^4.1.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form-devtools": "^1.1.3",
     "react-json-pretty": "^2.2.0",
     "react-router-dom": "^5.1.2"
   }
