--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "cogo-toast": "^4.2.3",
     "compression-webpack-plugin": "^3.1.0",
     "dayjs": "^1.8.22",
+    "fast-deep-equal": "^3.1.1",
     "loaders.css": "^0.1.2",
     "node-sass": "^4.13.1",
     "normalize.css": "^8.0.1",
