--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "react-day-picker": "^7.4.0",
     "react-hook-form": "^4.10.1",
     "react-loaders": "^3.0.1",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-with-breakpoints": "^4.0.4",
     "use-deep-compare-effect": "^1.3.0",
@@ -57,7 +58,6 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form-devtools": "^1.1.3",
-    "react-json-pretty": "^2.2.0",
-    "react-router-dom": "^5.1.2"
+    "react-json-pretty": "^2.2.0"
   }
 }
